# openai_agent_sdk

./: .gitignore
01_uv/01_simple_application/: main.py  pyproject.toml
01_uv/my-packaged-app/: pyproject.toml
01_uv/my-packaged-app/src/my_packaged_app/: __init__.py
03_streaming/: main.py  pyproject.toml
04_pyhton_dataclass/: main.py  pyproject.toml
05_pyhton_callable/: main.py  pyproject.toml
06_output_types.py/: main.py  pyproject.toml
06_tool_call/: 01_context_via_instructions.py  02_context_via_tool_call.py  03_context_via_web_search.py  06a_file_read_too.py  06b_Custom_function_tools.py  06c_mongodb_tool.py  06d_hosted_tool_agent.py  07_local_context.py  main.py  pyproject.toml
06a_agent_tools_example_todos/: main.py  pyproject.toml
07_local_context/: main.py  pyproject.toml
chai_hello/: .env  main.py  pyproject.toml
orchastration/: deterministic.py  llm_tracing.py  main.py  pyproject.toml
