[project]
name = "my-packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muhammad-noman732", email = "iasknoman156@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-packaged-app = "my_packaged_app:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
